@@ -1,4 +1,10 @@
-$Id: CHANGES,v 1.153 2002/01/07 14:36:32 stelian Exp $
+$Id: CHANGES,v 1.154 2002/01/10 09:02:54 stelian Exp $
+
+Changes between versions 0.4b26 and 0.4b27 (released ???????????????)
+=====================================================================
+
+1.	Fixed behaviour of dump when exceeding resource limits
+	(SIGXFSZ treatment).
 
 Changes between versions 0.4b25 and 0.4b26 (released January 7, 2002)
 =====================================================================
